Jakarta changes